templates/shellbox_template.yaml
---
# Source: shellbox/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shellbox-release-name
  labels:
    app: shellbox
    chart: shellbox-1.1.8
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: shellbox
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
      - port: 9102
        protocol: TCP
      # httpd-exporter
      - port: 9117
        protocol: TCP
      # php-fpm-exporter
      - port: 9118
        protocol: TCP
      # php-level monitoring
      - port: 9181
        protocol: TCP
---
# Source: shellbox/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shellbox-release-name
  labels:
    app: shellbox
    chart: shellbox-1.1.8
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: shellbox
    release: release-name
    routed_via: release-name
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
# Source: shellbox/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shellbox-release-name
  labels:
    app: shellbox
    chart: shellbox-1.1.8
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: shellbox
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: shellbox
        release: release-name
        routed_via: release-name
      annotations:        
        checksum/secrets: e81f2380f3041669e4e7fc0fbc9c0804d647025a1abb6c9e6e912eb4d8c0bac3
        prometheus.io/scrape_by_name: "true"        
        checksum/apache: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      containers:        
        # The apache httpd container
        # TODO: set up logging. See T265876
        - name: shellbox-release-name-httpd
          image: docker-registry.wikimedia.org/httpd-fcgi:2.4.38-4
          imagePullPolicy: IfNotPresent
          ports:
            - name: httpd
              containerPort: 8080
            # PHP monitoring port
            - name: php-metrics
              containerPort: 9181
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: php-metrics
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 1
              memory: 400Mi
          volumeMounts:
          - name: shellbox-httpd-config
            mountPath: "/etc/apache2/conf-enabled/90-shellbox.conf"
            subPath: 90-shellbox.conf
            readOnly: true
        - name: shellbox-release-name-app
          image: docker-registry.wikimedia.org/wikimedia/mediawiki-libs-shellbox:score
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 1
            periodSeconds: 5  
          resources:
            requests:
              cpu: 100m
              memory: 1024Mi
            limits:
              cpu: 1
              memory: 2048Mi
          
          volumeMounts:
            - name: shellbox-config
              mountPath: "/srv/app/config"
              readOnly: true
        
        
        # Add the following exporters:
        # php-fpm exporter
        # apache exporter on port 9117
        - name: shellbox-release-name-httpd-exporter
          image: docker-registry.wikimedia.org/prometheus-apache-exporter:0.0.3
          imagePullPolicy: IfNotPresent
          args: ["-scrape_uri", "http://127.0.0.1:9181/server-status?auto"]
          ports:
            - name: httpd-metrics
              containerPort: 9117
          livenessProbe:
            tcpSocket:
              port: 9117
        - name: shellbox-release-name-php-fpm-exporter
          image: docker-registry.wikimedia.org/prometheus-php-fpm-exporter:0.0.3
          args: ["--endpoint=http://127.0.0.1:9181/fpm-status", "--addr=0.0.0.0:9118"]
          ports:
            - name: fpm-metrics
              containerPort: 9118
          livenessProbe:
            tcpSocket:
              port: 9118
                
      volumes:        
          
        
        []
---
# Source: shellbox/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'shellbox-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'shellbox-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(SHELLBOX_RELEASE_NAME_SERVICE_HOST)', 'http://shellbox-release-name:8080']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
